--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,22 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /**orange**/
+
+  --ion-color-orange: #ff7400;
+  --ion-color-orange-rgb: 255,116,0;
+  --ion-color-orange-contrast: #f7e5e5;
+  --ion-color-orange-contrast-rgb: 0,0,0;
+  --ion-color-orange-shade: #e06600;
+  --ion-color-orange-tint: #ff821a;
+}
+.ion-color-orange{
+  --ion-color-base: var(--ion-color-orange) !important;
+  --ion-color-base-rgb: var(--ion-color-orange-rgb) !important;
+  --ion-color-contrast: var(--ion-color-orange-contrast) !important;
+  --ion-color-contrast-rgb: var(--ion-color-orange-contrast-rgb) !important;
+  --ion-color-shade: var(--ion-color-orange-shade) !important;
+  --ion-color-tint: var( --ion-color-orange-tint) !important;
+
 }
