--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -93,3 +93,9 @@
   --ion-color-tint: var( --ion-color-orange-tint) !important;
 
 }
+.icon{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
