--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -22,7 +22,7 @@
   <br>
   <ion-button (click)="onSubmitLogin()" expand="block">Login</ion-button>
   <br>
-  <p text-center routerLink="/registro">Create Account</p>
+  <p text-center routerLink="/registro"><b>Account</b> </p>
   
   </ion-content>
   
