--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-button slot="end" fill="clear" (click)="presentActionSheet()">
           <ion-icon style="color:#fff" name="menu"></ion-icon>
         </ion-button>
-        <ion-button slot="start" fill="clear" [routerLink]="['/profile',user]">
+        <ion-button slot="start" fill="clear" (click)="profile()">
           <ion-icon style="color:#ffff; font-size:35px;" name="contact"></ion-icon>
         </ion-button>
     <ion-title text-center>
